added more env variables for twitch

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 VITE_OBS_WEBSOCKET_HOST=
 VITE_OBS_WEBSOCKET_PORT=
 VITE_OBS_WEBSOCKET_PASSWORD=
+
+VITE_TWITCH_CLIENT_ID=
+VITE_TWITCH_USERNAME=
+VITE_TWITCH_OAUTH_TOKEN=
