add node types and styling

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
     "@types/dom-speech-recognition": "^0.0.4",
+    "@types/node": "^22.13.10",
     "@types/uuid": "^10.0.0",
     "@types/websocket": "^1.0.10",
     "typescript": "~5.6.2",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "vite-plugin-node-polyfills": "^0.23.0"
   },
   "dependencies": {
     "crypto-js": "^4.2.0",
