update readme, fixed up the vite envs

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,21 @@ VITE_OBS_WEBSOCKET_HOST=
 VITE_OBS_WEBSOCKET_PORT=
 VITE_OBS_WEBSOCKET_PASSWORD=
 
+VITE_TWITCH_SECRET=
 VITE_TWITCH_CLIENT_ID=
 VITE_TWITCH_USERNAME=
 VITE_TWITCH_OAUTH_TOKEN=
+VITE_TWITCH_REDIRECT_URI=
+
+VITE_LIFX_OAUTH_TOKEN=
+VITE_LIFX_API_URL=
+VITE_LIFX_API_VERSION=
+
+VITE_LLM_BASE_URL=
+
+VITE_SPOTIFY_CLIENT_ID=
+VITE_SPOTIFY_CLIENT_SECRET=
+VITE_SPOTIFY_REDIRECT_URI=
+VITE_SPOTIFY_SCOPE=
+VITE_SPOTIFY_TOKEN=
+
